0.9.12
    - DataRepresentation & TypeConsistencyEnforcement QoS policies as Parameters on wire. 
      For DataRepresentation, only XCDR_DATA_REPRESENTATION kind is supported.
    - BaseTypeName & EquivalentTypeName parameters on wire are recognized
      
0.9.11
    - FIX: During discovery, DataWriterPolicys and DataReaderPolicys are
      passed to remote entity instead of InlineQoS policies.
    - PARTITION QoS policy with minor deviation from spec; partitions can be 
      compatible, if they both contain regular expressions. For example, 
      "part.*" partition is compatible with "partition.*". This is accomplished
      by checking partition names in both ways.
      
    
0.9.10
    - Documentation update
    - FIX: gracefully close deadline monitors during participant close
    - FIX: Duration nsec calculation from millis
    - FIX: QoS compatibility check compares to default value, if given policy is 
      not explicitly found from QoS policies.
    
0.9.9
    - Documentation update
    - Duration(-1) represents infinite Duration
    
0.9.8
    - Removed ReaderListener & WriterListener in favor of CommunicationListener.
    - DEADLINE QoS
    - DESTINATION_ORDER follows the same semantics as specified in DDS specification.
      I.e. determination is done at instance level, not at sample level
    - FIX: add INFO_DESTINATION to messages

0.9.6 - 0.9.7
    - skipped release

0.9.5
    - handle INFO_DESTINATION
    - Detect of restoration of liveliness. 
    - A Possibility to create custom TransportProviders. As a proof-of-concept,
      a new memory based TransportProvider is provided. This provider can be 
      used in configuration URIs with scheme 'mem'. 
    - Config: jrtps.discovery.announce-uris provides a list of URIs, that is used 
      to determine where to announce presence of participants.
    
0.9.4
    - Removed SampleKey. KeyHash is adequate to represent a key of samples and instances.